--- a/MTD Swapper/MTD Swapper.csproj
+++ b/MTD Swapper/MTD Swapper.csproj
@@ -5,6 +5,9 @@
 	<TargetFramework>net5.0</TargetFramework>
 	<RootNamespace>MTD_Swapper</RootNamespace>
 	  <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
+	  <StartupObject></StartupObject>
+	  <ApplicationIcon />
+	  <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
