--- a/MTD Swapper UI/MTD Swapper UI.csproj
+++ b/MTD Swapper UI/MTD Swapper UI.csproj
@@ -7,6 +7,7 @@
     <UseWPF>true</UseWPF>
 	<IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
 	<ApplicationIcon>icon\MTDSwapper.ico</ApplicationIcon>
+	<Version>1.3.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
